# annotation-system

./: .gitignore  README.md  pyproject.toml
backend/: cli.py  conf.py  main.py  requirements.txt
backend/core/: crud.py  db.py  schema.py  service.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.vue
